[Agentic] Add language in prompt, new chat history tool
+ various fixes